--- a/vercel.json
+++ b/vercel.json
@@ -7,10 +7,5 @@
   ],
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": "vite",
-  "routes": [
-    {
-      "handle": "filesystem"
-    }
-  ]
+  "framework": "vite"
 }
